<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".LoginActivity">

    <include layout="@layout/public_title" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_icon_size"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sharp_login_input_bg"
        android:gravity="center"
        android:hint="@string/user_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_icon_size"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sharp_login_input_bg"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/user_pwd" />

    <TextView
        android:id="@+id/tv_login_start_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_icon_size"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sharp_login_start_btn"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/login_text" />

    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/login_btn_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@color/login_input_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/use_third_login" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@color/login_input_bg" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_third_party_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:layout_marginTop="20dp">


        <ImageView
            android:id="@+id/iv_wechat_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_meiyun_share_qq" />

        <ImageView
            android:id="@+id/iv_qq_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_toLeftOf="@id/iv_wechat_login_btn"
            android:src="@mipmap/ic_meiyun_share_weibo" />

        <ImageView
            android:id="@+id/iv_weibo_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/iv_wechat_login_btn"
            android:src="@mipmap/ic_meiyun_share_wechat" />
    </RelativeLayout>
</LinearLayout>
